# castle-game

./: .gitignore  CastleClient.sln  CastleServer.sln  README.md  Server.cs  meson.build
CastleClient/: CastleClient.csproj  Program.cs
CastleClient/Properties/: AssemblyInfo.cs
CastleServer/: CastleServer.csproj  Program.cs
CastleServer/Properties/: AssemblyInfo.cs
include/database/: database_manager.hpp
include/factions/: faction.hpp  faction_type.hpp  specific_factions.hpp
include/networking/: client_connection.hpp  message.hpp  message_utils.hpp
include/server/: castle_server.hpp  chat_handler.hpp  game_state.hpp  map.hpp  player.hpp  player_manager.hpp  resource_manager.hpp  timer.hpp
include/shops/: shop.hpp  specific_shops.hpp
include/units/: specific_units.hpp  unit.hpp  unit_stats.hpp
include/upgrades/: specific_upgrades.hpp  upgrade.hpp  upgrade_manager.hpp
include/utils/: color.hpp  types.hpp
src/: main.cpp
src/database/: database_manager.cpp
src/factions/: faction.cpp  specific_factions.cpp
src/networking/: client_connection.cpp  message.cpp
src/server/: castle_server.cpp  chat_handler.cpp  game_state.cpp  map.cpp  player.cpp  player_manager.cpp  resource_manager.cpp  timer.cpp
src/shops/: shop.cpp  specific_shops.cpp
src/units/: specific_units.cpp  unit.cpp
src/upgrades/: specific_upgrades.cpp  upgrade.cpp  upgrade_manager.cpp
